src/shim_block.h

typedef blk_features_t rs_blk_features_t;
typedef u32 rs_blk_features_t;
/*
 * The Rust bindings intentionally expose block_device_operations callbacks as
 * opaque one-argument callbacks.  Keep the C side ABI-compatible with that.
 */
typedef void (*rs_bdo_callback_t)(void *);
/* block_device_operations accessors */
rs_bdo_callback_t rs_block_device_operations_submit_bio(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_submit_bio(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_open(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_open(struct block_device_operations *obj,
					 rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_release(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_release(struct block_device_operations *obj,
					    rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_ioctl(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_ioctl(struct block_device_operations *obj,
					  rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_compat_ioctl(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_compat_ioctl(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_check_events(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_check_events(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_unlock_native_capacity(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_unlock_native_capacity(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_getgeo(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_getgeo(struct block_device_operations *obj,
					   rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_set_read_only(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_set_read_only(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_swap_slot_free_notify(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_swap_slot_free_notify(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_report_zones(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_report_zones(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_devnode(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_devnode(struct block_device_operations *obj,
					    rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_alternative_gpt_sector(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_alternative_gpt_sector(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_get_unique_id(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_get_unique_id(
		struct block_device_operations *obj, rs_bdo_callback_t value);
/* queue_limits accessors */
rs_blk_features_t rs_queue_limits_features(const struct queue_limits *obj);
void rs_queue_limits_set_features(struct queue_limits *obj,
				  rs_blk_features_t value);
u32 rs_queue_limits_logical_block_size(const struct queue_limits *obj);
void rs_queue_limits_set_logical_block_size(struct queue_limits *obj,
					    u32 value);
u32 rs_queue_limits_physical_block_size(const struct queue_limits *obj);
void rs_queue_limits_set_physical_block_size(struct queue_limits *obj,
					     u32 value);