src/helpers.h

struct file;
struct inode;
struct vm_area_struct;