src/shim.h

struct seq_file;
struct module;
struct file;