rust/src/bindings.rs


    // Firmware accessors.
    #[link_name = "rs_firmware_size"]
    pub fn rs_firmware_size(obj: *const firmware) -> usize;
    #[link_name = "rs_firmware_data"]
    pub fn rs_firmware_data(obj: *const firmware) -> *const u8;
    // kiocb accessors.
    #[link_name = "rs_kiocb_ki_filp"]
    pub fn rs_kiocb_ki_filp(obj: *const kiocb) -> *mut file;
    #[link_name = "rs_kiocb_ki_pos"]
    pub fn rs_kiocb_ki_pos(obj: *const kiocb) -> loff_t;
    #[link_name = "rs_kiocb_set_ki_pos"]
    pub fn rs_kiocb_set_ki_pos(obj: *mut kiocb, value: loff_t);
    // miscdevice accessors.
    #[link_name = "rs_miscdevice_minor"]
    pub fn rs_miscdevice_minor(obj: *const miscdevice) -> c_int;
    #[link_name = "rs_miscdevice_set_minor"]
    pub fn rs_miscdevice_set_minor(obj: *mut miscdevice, value: c_int);
    #[link_name = "rs_miscdevice_name"]
    pub fn rs_miscdevice_name(obj: *const miscdevice) -> *const c_char;
    #[link_name = "rs_miscdevice_set_name"]
    pub fn rs_miscdevice_set_name(obj: *mut miscdevice, value: *const c_char);
    #[link_name = "rs_miscdevice_fops"]
    pub fn rs_miscdevice_fops(obj: *const miscdevice) -> *const file_operations;
    #[link_name = "rs_miscdevice_set_fops"]
    pub fn rs_miscdevice_set_fops(obj: *mut miscdevice, value: *const file_operations);
    #[link_name = "rs_miscdevice_this_device"]
    pub fn rs_miscdevice_this_device(obj: *const miscdevice) -> *mut device;
    #[link_name = "rs_miscdevice_set_this_device"]
    pub fn rs_miscdevice_set_this_device(obj: *mut miscdevice, value: *mut device);
    // queue_limits accessors.
    #[link_name = "rs_queue_limits_features"]
    pub fn rs_queue_limits_features(obj: *const queue_limits) -> blk_features_t;
    #[link_name = "rs_queue_limits_set_features"]
    pub fn rs_queue_limits_set_features(obj: *mut queue_limits, value: blk_features_t);
    #[link_name = "rs_queue_limits_logical_block_size"]
    pub fn rs_queue_limits_logical_block_size(obj: *const queue_limits) -> u32;
    #[link_name = "rs_queue_limits_set_logical_block_size"]
    pub fn rs_queue_limits_set_logical_block_size(obj: *mut queue_limits, value: u32);
    #[link_name = "rs_queue_limits_physical_block_size"]
    pub fn rs_queue_limits_physical_block_size(obj: *const queue_limits) -> u32;
    #[link_name = "rs_queue_limits_set_physical_block_size"]
    pub fn rs_queue_limits_set_physical_block_size(obj: *mut queue_limits, value: u32);
    // file_operations accessors.
    #[link_name = "rs_file_operations_owner"]
    pub fn rs_file_operations_owner(obj: *const file_operations) -> *mut module;
    #[link_name = "rs_file_operations_set_owner"]
    pub fn rs_file_operations_set_owner(obj: *mut file_operations, value: *mut module);
    #[link_name = "rs_file_operations_open"]
    pub fn rs_file_operations_open(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut inode, *mut file) -> c_int>;
    #[link_name = "rs_file_operations_set_open"]
    pub fn rs_file_operations_set_open(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut inode, *mut file) -> c_int>);
    #[link_name = "rs_file_operations_release"]
    pub fn rs_file_operations_release(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut inode, *mut file) -> c_int>;
    #[link_name = "rs_file_operations_set_release"]
    pub fn rs_file_operations_set_release(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut inode, *mut file) -> c_int>);
    #[link_name = "rs_file_operations_mmap"]
    pub fn rs_file_operations_mmap(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut file, *mut vm_area_struct) -> c_int>;
    #[link_name = "rs_file_operations_set_mmap"]
    pub fn rs_file_operations_set_mmap(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut file, *mut vm_area_struct) -> c_int>);
    #[link_name = "rs_file_operations_llseek"]
    pub fn rs_file_operations_llseek(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut file, loff_t, c_int) -> loff_t>;
    #[link_name = "rs_file_operations_set_llseek"]
    pub fn rs_file_operations_set_llseek(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut file, loff_t, c_int) -> loff_t>);
    #[link_name = "rs_file_operations_read_iter"]
    pub fn rs_file_operations_read_iter(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut kiocb, *mut iov_iter) -> isize>;
    #[link_name = "rs_file_operations_set_read_iter"]
    pub fn rs_file_operations_set_read_iter(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut kiocb, *mut iov_iter) -> isize>);
    #[link_name = "rs_file_operations_write_iter"]
    pub fn rs_file_operations_write_iter(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut kiocb, *mut iov_iter) -> isize>;
    #[link_name = "rs_file_operations_set_write_iter"]
    pub fn rs_file_operations_set_write_iter(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut kiocb, *mut iov_iter) -> isize>);
    #[link_name = "rs_file_operations_unlocked_ioctl"]
    pub fn rs_file_operations_unlocked_ioctl(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut file, c_uint, crate::ffi::c_ulong) -> c_long>;
    #[link_name = "rs_file_operations_set_unlocked_ioctl"]
    pub fn rs_file_operations_set_unlocked_ioctl(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut file, c_uint, crate::ffi::c_ulong) -> c_long>);
    #[cfg(CONFIG_COMPAT)]
    #[link_name = "rs_file_operations_compat_ioctl"]
    pub fn rs_file_operations_compat_ioctl(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut file, c_uint, crate::ffi::c_ulong) -> c_long>;
    #[cfg(CONFIG_COMPAT)]
    #[link_name = "rs_file_operations_set_compat_ioctl"]
    pub fn rs_file_operations_set_compat_ioctl(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut file, c_uint, crate::ffi::c_ulong) -> c_long>);
    #[link_name = "rs_file_operations_show_fdinfo"]
    pub fn rs_file_operations_show_fdinfo(obj: *const file_operations) -> Option<unsafe extern "C" fn(*mut seq_file, *mut file)>;
    #[link_name = "rs_file_operations_set_show_fdinfo"]
    pub fn rs_file_operations_set_show_fdinfo(obj: *mut file_operations, value: Option<unsafe extern "C" fn(*mut seq_file, *mut file)>);
    // block_device_operations accessors.
    #[link_name = "rs_block_device_operations_submit_bio"]
    pub fn rs_block_device_operations_submit_bio(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_submit_bio"]
    pub fn rs_block_device_operations_set_submit_bio(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_open"]
    pub fn rs_block_device_operations_open(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_open"]
    pub fn rs_block_device_operations_set_open(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_release"]
    pub fn rs_block_device_operations_release(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_release"]
    pub fn rs_block_device_operations_set_release(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_ioctl"]
    pub fn rs_block_device_operations_ioctl(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_ioctl"]
    pub fn rs_block_device_operations_set_ioctl(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_compat_ioctl"]
    pub fn rs_block_device_operations_compat_ioctl(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_compat_ioctl"]
    pub fn rs_block_device_operations_set_compat_ioctl(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_check_events"]
    pub fn rs_block_device_operations_check_events(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_check_events"]
    pub fn rs_block_device_operations_set_check_events(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_unlock_native_capacity"]
    pub fn rs_block_device_operations_unlock_native_capacity(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_unlock_native_capacity"]
    pub fn rs_block_device_operations_set_unlock_native_capacity(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_getgeo"]
    pub fn rs_block_device_operations_getgeo(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_getgeo"]
    pub fn rs_block_device_operations_set_getgeo(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_set_read_only"]
    pub fn rs_block_device_operations_set_read_only(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_set_read_only"]
    pub fn rs_block_device_operations_set_set_read_only(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_swap_slot_free_notify"]
    pub fn rs_block_device_operations_swap_slot_free_notify(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_swap_slot_free_notify"]
    pub fn rs_block_device_operations_set_swap_slot_free_notify(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_report_zones"]
    pub fn rs_block_device_operations_report_zones(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_report_zones"]
    pub fn rs_block_device_operations_set_report_zones(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_devnode"]
    pub fn rs_block_device_operations_devnode(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_devnode"]
    pub fn rs_block_device_operations_set_devnode(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_alternative_gpt_sector"]
    pub fn rs_block_device_operations_alternative_gpt_sector(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_alternative_gpt_sector"]
    pub fn rs_block_device_operations_set_alternative_gpt_sector(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_get_unique_id"]
    pub fn rs_block_device_operations_get_unique_id(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_get_unique_id"]
    pub fn rs_block_device_operations_set_get_unique_id(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
